--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <body>
  <div class="toolsBar"></div>
  <div class="personData">
-
-  
- 
- </div>
- 
+  <div class="lds-spinner">
+   <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+ </div> 
  <script src="app.js"></script>
 </body>
 </html>
