--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
  <div class="toolsBar"></div>
  <div class="personData">
   <div class="lds-spinner">
-   <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+   <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+  </div>
  </div> 
  <script src="app.js"></script>
 </body>
